Bug 1622759 - Don't fail when nr_interface_prioritizer_add_interface() returns R_ALREADY r=bwc

This allows us to continue adding remaining interfaces from addrs array and
makes sure nr_interface_prioritizer_sort_preference() is called at the end.

Differential Revision: https://phabricator.services.mozilla.com/D66941